@@ -6,6 +6,7 @@ import org.springframework.core.io.Resource;
 
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.file.Files;
 import java.util.Base64;
 
@@ -18,8 +19,7 @@ public class Team {
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long teamId;
 
-    @OneToOne(cascade = CascadeType.ALL)
-    @JoinColumn(name = "fk_locationId", referencedColumnName = "locationId")
+    @ManyToOne(cascade = CascadeType.ALL)
     private Location location;
 
     @Column(nullable = false)
@@ -39,9 +39,24 @@ public class Team {
         this.location = location;
         this.sport = sport;
         Resource resource = new ClassPathResource("/static/image/default-profile.png");
-        File file = resource.getFile();
-        this.pictureString = Base64.getEncoder().encodeToString(Files.readAllBytes(file.toPath()));
+        InputStream is = resource.getInputStream();
+        this.pictureString = Base64.getEncoder().encodeToString(is.readAllBytes());
+    }
 
+    /**
+     * Should be used for testing ONLY!
+     * TODO: Remove this constructor, use builder pattern. same for user
+     * @param name
+     * @param sport
+     */
+    public Team(String name, String sport) throws IOException {
+        this.name = name;
+        // create a dummy location
+        this.location = new Location("address1", "address2", "suburb", "chch", "8052", "new zealand");
+        this.sport = sport;
+        Resource resource = new ClassPathResource("/static/image/default-profile.png");
+        InputStream is = resource.getInputStream();
+        this.pictureString = Base64.getEncoder().encodeToString(is.readAllBytes());
     }
 
     public Long getTeamId() {
